--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-prettier": "^9.1.0",
-    "koa": "^2.14.2"
+    "koa": "^2.14.2",
+    "koa-router": "^12.0.1"
   },
   "devDependencies": {
     "eslint": "^8.55.0",
     "nodemon": "^3.0.2"
   },
-  
-    "scripts": {
-      "start": "node src",
-      "start:dev": "nodemon --watch src/ src/index.js"
-    
+  "scripts": {
+    "start": "node src",
+    "start:dev": "nodemon --watch src/ src/index.js"
   }
 }
